--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
